CSS updated and final changes made

--- a/techdegree-project-1/styles.css
+++ b/techdegree-project-1/styles.css
@@ -55,9 +55,16 @@
     color: white
   }
   
-  header {
+  .home-header {
     text-align: center;
     background: url('images/marrakech.jpg') no-repeat top center ;
+    background-size: cover;
+    overflow: hidden;
+    padding-top: 60px;
+  }
+  .hobbies-header {
+    text-align: center;
+    background: url('images/painting.jpg') no-repeat top center ;
     background-size: cover;
     overflow: hidden;
     padding-top: 60px;
