--- a/techdegree-project-1/styles.css
+++ b/techdegree-project-1/styles.css
@@ -69,6 +69,13 @@
     overflow: hidden;
     padding-top: 60px;
   }
+  .contact-header {
+    text-align: center;
+    background: url('images/contact-header.jpg') no-repeat top center ;
+    background-size: cover;
+    overflow: hidden;
+    padding-top: 60px;
+  }
   header {
     line-height: 1.5;
   }
